# totpdoctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: diagnosis.md
examples/: README.md  diagnose_walkthrough.sh  library_usage.py
scripts/: smoke.sh
src/totpdoctor/: __init__.py  __main__.py  base32.py  cli.py  diagnose.py  errors.py  explain.py  otp.py  report.py  uri.py
tests/: conftest.py  test_base32.py  test_cli.py  test_diagnose.py  test_otp.py  test_report.py  test_uri.py
