[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totpdoctor"
version = "0.1.0"
description = "Explain why a TOTP or HOTP code mismatches: clock skew, digits, algorithm, base32 — a 2FA debugger, not another code generator."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["totp", "hotp", "2fa", "otp", "debugging", "base32", "clock-skew", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
totpdoctor = "totpdoctor.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/totpdoctor"
Repository = "https://github.com/JaydenCJ/totpdoctor"
Issues = "https://github.com/JaydenCJ/totpdoctor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
